--- a/sample_app/app/assets/stylesheets/custom.scss
+++ b/sample_app/app/assets/stylesheets/custom.scss
@@ -1,64 +1,105 @@
-	@import "bootstrap-sprockets";
-	@import "bootstrap";
+@import "bootstrap-sprockets";
+@import "bootstrap";
 
-	/*  Universal  */
+/* mixins, variables, etc. */
+$gray-medium-light: #eaeaea;
+$gray: #555;
+$gray-darker: #222;
+$gray-light: #777;
 
-	body {
-		padding-top: 60px;
-	}
+/*  Universal  */
 
-	section {
-		overflow: auto;
-	}
-	textarea {
-		resize: vertical;
-	}
-	.center {
-		text-align: center;
-	}
-	.center h1 {
-		margin-bottom: 10px;
-	}
+body {
+	padding-top: 60px;
+}
 
-	/* ---------Typography ------------  */
-
-	h1, h2, h3, h4, h5, h6 {
-		line-height: 1;
-	}
-
+section {
+	overflow: auto;
+}
+textarea {
+	resize: vertical;
+}
+.center {
+	text-align: center;
+	
 	h1 {
-		font-size: 3em;
-		letter-spacing: -2px;
-		margin-bottom: 30px;
-		text-align: center;
+	margin-bottom: 10px;
 	}
-	h2 {
-		font-size: 1.1em;
-		letter-spacing: -1px;
-		margin-bottom: 30px;
-		text-align: center;
-		font-weight: normal;
-		color: #777;
+}
+ 
+
+/* ---------Typography ------------  */
+
+h1, h2, h3, h4, h5, h6 {
+	line-height: 1;
+}
+
+h1 {
+	font-size: 3em;
+	letter-spacing: -2px;
+	margin-bottom: 30px;
+	text-align: center;
+}
+h2 {
+	font-size: 1.1em;
+	letter-spacing: -1px;
+	margin-bottom: 30px;
+	text-align: center;
+	font-weight: normal;
+	color: #777;
+}
+p {
+	font-size: 1.1em;
+	line-height: 1.7em;
+}
+
+/*  Header  */
+
+#logo {
+	float: left;
+	margin-right: 10px;
+	font-size: 1.7em;
+	color: #fff;
+	text-transform: uppercase;
+	letter-spacing: -1px;
+	padding-top: 9px;
+	font-weight: bold;
+	
+	&:hover {
+	color: #fff;
+	text-decoration: none;
 	}
-	p {
-		font-size: 1.1em;
-		line-height: 1.7em;
+}
+
+
+
+/*  Footer  */
+
+footer {
+	margin-top: 45px;
+	padding-top: 5px;
+	border-top: 1px solid $gray-medium-light;
+	color: $gray-light;
+	
+	a {
+	color: $gray;
+	
+		&:hover {
+		color: $gray-darker;
+		}	
+	}
+	
+	small {
+	float: left;
 	}
 
-	/*  Header  */
+	ul {
+	float: right;
+	list-style: none;
 
-	#logo {
+		li {
 		float: left;
-		margin-right: 10px;
-		font-size: 1.7em;
-		color: #fff;
-		text-transform: uppercase;
-		letter-spacing: -1px;
-		padding-top: 9px;
-		font-weight: bold;
+		margin-left: 15px;
+		}
 	}
-
-	#logo:hover {
-		color: #fff;
-		text-decoration: none;
-	}
+}
