--- a/sample_app/app/views/static_pages/home.html.erb
+++ b/sample_app/app/views/static_pages/home.html.erb
@@ -4,7 +4,7 @@
 		<a href="https://www.railstutorial.org/">Ruby on Rails Tutorials</a>
 		sample application.
 	</h2>
-	<%= link_to "Sign Up now!", '#', class: "btn btn-lg btn-primary" %>
+	<%= link_to "Sign Up now!", signup_path, class: "btn btn-lg btn-primary" %>
 </div>
 <%= link_to image_tag("rails.svg", alt: "Rails logo", width: "200px"),  "https://rubyonrails.org/" %>
 <%#= link_to image_tag("kitten.jpg", alt: "Kitten", width: "200px") %>
