--- a/sample_app/app/views/layouts/_rails_default.html.erb
+++ b/sample_app/app/views/layouts/_rails_default.html.erb
@@ -1,7 +1,7 @@
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
-  <%= stylesheet_link_tag 'application', media: 'all','data-turbolinks-track': 'reload' %>
-  <%#= javascript_include_tag "jquery.min.js"%>
+  <%= stylesheet_link_tag 'application', media: 'all' %>
+  <%= javascript_include_tag "application.js"%>
   <%#= javascript_include_tag "popper.min.js"%>
   <%#= javascript_include_tag "bootstrap.min.js"%>
   <%#= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
