--- a/sample_app/app/views/layouts/application.html.erb
+++ b/sample_app/app/views/layouts/application.html.erb
@@ -6,6 +6,8 @@
   <%#= javascript_include_tag "jquery.min.js"%>
   <%#= javascript_include_tag "popper.min.js"%>
   <%#= javascript_include_tag "bootstrap.min.js"%>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
   <%= render 'layouts/rails_default' %>
   <%= render 'layouts/shim' %>
 </head>
