--- a/sample_app/app/views/layouts/_header.html.erb
+++ b/sample_app/app/views/layouts/_header.html.erb
@@ -1,9 +1,9 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
     <div class="container">
       <%= link_to "sample app", root_path, id: "logo" %>
-      <nav>
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" 
+      <nav class="navbar navbar-expand-lg ">
+    <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed"
           data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
           aria-expanded="false">
           <span class="sr-only">Toggle Navigation</span>
@@ -12,30 +12,35 @@
           <span class="icon-bar"></span>
         </button>
       </div>
-        <ul class="nav navbar-nav navbar-right collapse navbar-collapse" 
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
+      <ul class="nav navbar-nav navbar-right collapse navbar-collapse"
         id="bs-example-navbar-collapse-1">
           <li><%= link_to "Home", root_path %></li>
           <li><%= link_to "Help", help_path %></li>
           <% if logged_in? %>
           <li><%= link_to "Users", users_path %></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-              Account
-            </a>
-            <ul class="dropdown-menu">
-              <li><%= link_to "Profile", current_user %></li>
-              <li><%= link_to "Settings", edit_user_path(current_user) %></li>
-              <li class="divider"></li>
-              <li>
+        <li class="nav-item dropdown">
+          <a href="#" class="dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+            Account
+          </a>
+          <ul class="dropdown-menu dropdown-menu-dark">
+            <li class="dropdown-item"><%= link_to "Profile", current_user %></li>
+              <li class="dropdown-item"><%= link_to "Settings", edit_user_path(current_user) %></li>
+              <li class="divider dropdown-item"></li>
+              <li class="dropdown-item">
                 <%= link_to "Log out", logout_path, method:"delete" %>
               </li>
-            </ul>
-          </li>
-          <% else %>
+          </ul>
+        </li>
+        <% else %>
           <li><%= link_to "Log in", login_path %></li>
           <% end %>
-        </ul>
-      </nav>
+      </ul>
     </div>
-
-  </header>
+</nav>
+</div>
+</header>
