--- a/sample_app/app/views/layouts/application.html.erb
+++ b/sample_app/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 </head>
 <body>
   <%= render 'layouts/header' %>
-  <div class="container">
+  <div class="container mt-5">
     <% flash.each do |message_type, message| %>
     <!--<div class="alert alert-<%= message_type %>"><%= message %></div> %> -->
     <%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
