--- a/JaipurCityHospital/app/views/layouts/_header.html.erb
+++ b/JaipurCityHospital/app/views/layouts/_header.html.erb
@@ -26,24 +26,29 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link ">Doctors</a>
+          <a class="nav-link "><%= link_to "Doctors", doctors_path %></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Services</a>
+          <a class="nav-link"><%= link_to "Patients", patients_path %></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Career</a>
         </li>
-        <li class="nav-item">
+        <!--li class="nav-item">
           <a class="nav-link" href="#">Financial Support</a>
-        </li>
+        </li-->
         <li class="nav-item">
           <a class="nav-link" href="#">Contact Us</a>
         </li>
+
 <button class="btn btn-outline-primary" type="submit">Lab Report</button>
+
       </ul>
+       <%= link_to "Doctor's login", login_path %>| |
+       <%= link_to " Patient's login", signin_path %>
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
     </div>
