--- a/JaipurCityHospital/app/views/layouts/application.html.erb
+++ b/JaipurCityHospital/app/views/layouts/application.html.erb
@@ -13,11 +13,20 @@
   </head>
 
   <body>
+    <div id="layout-wrapper">
     <%= render 'layouts/header' %>
     <%= render 'layouts/sidebar' %>
-    <p class="notice"><%= notice %></p>
-       <p class="alert"><%= alert %></p>
+    <div class="main-content">
+      <div class="page-content">
+        <div class="container-fluid">
+    <!--p class="notice"><%= notice %></p>
+       <p class="alert"><%= alert %></p-->
     <%= yield %>
-    <%= render 'layouts/footer' %>
+  </div>
+</div>
+
+  </div>
+  <%= render 'layouts/footer' %>
+</div>
   </body>
 </html>
