--- a/JaipurCityHospital/app/views/doctors/show.html.erb
+++ b/JaipurCityHospital/app/views/doctors/show.html.erb
@@ -8,6 +8,7 @@
       <h3>
         <%#= gravatar_for @user %>
         <%= @doctor.name %>
+        <%= @doctor.email %>
       </h3>
     </section>
   </aside>
