--- a/JaipurCityHospital/app/views/layouts/_footer.html.erb
+++ b/JaipurCityHospital/app/views/layouts/_footer.html.erb
@@ -19,7 +19,7 @@
 
       <!-- Right -->
       <div>
-        <a href="" class="text-white me-4">
+        <a href="https://www.facebook.com/login/" class="text-white me-4">
           <i class="fab fa-facebook-f"></i>
         </a>
         <a href="" class="text-white me-4">
