--- a/JaipurCityHospital/app/views/doctors/_doctor.html.erb
+++ b/JaipurCityHospital/app/views/doctors/_doctor.html.erb
@@ -1,5 +1,5 @@
 <li>
 
     <%= link_to doctor.name, doctor %>
-    | <%= link_to "delete", doctor, method: :delete, data: { confirm: "You sure?" } %>
+    | <%= link_to doctor.email, doctor %> |<%= link_to "delete", doctor, method: :delete, data: { confirm: "You sure?" } %>
   </li>
