--- a/JaipurCityHospital/app/views/doctors/index.html.erb
+++ b/JaipurCityHospital/app/views/doctors/index.html.erb
@@ -1,10 +1,40 @@
 <% provide(:title, 'All Doctors') %>
 <h1>All doctors</h1>
-<%#= will_paginate %>
+
 <ul class="doctors">
   <%# @doctors.each do |doctor| %>
   <%#= render doctor %>
-  <%= render @doctors %>
+  <%#= render @doctors %>
   <%# end %>
 </ul>
-<%#= will_paginate %>
+<%= will_paginate %>
+
+<div class="table-responsive">
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Email</th>
+            <th>Phone Number</th>
+            <th>Department</th>
+            <th>Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @doctors.each do |doctor| %>
+            <tr>
+              <td><%= link_to doctor.name, doctor %></td>
+              <td><%= doctor.email %></td>
+              <td><%= doctor.name %></td>
+              <td><%= doctor.name %></td>
+              <td>
+                <%= link_to "Edit", edit_doctor_path(doctor) , class: 'btn btn-primary btn-sm' %>
+                <%= link_to "View", doctor_path(doctor) , class: 'btn btn-success btn-sm' %>
+                <%= link_to "Delete", doctor_path(doctor), title: 'Delete', class: 'fa fa-trash-alt btn btn-danger btn-sm', method: :delete, data: { confirm: "Are you sure you want to delete this doctor #{doctor.name}?" } %>
+              </td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+    <%= will_paginate %>
