--- a/JaipurCityHospital/app/views/patients/index.html.erb
+++ b/JaipurCityHospital/app/views/patients/index.html.erb
@@ -1,10 +1,41 @@
 <% provide(:title, 'All Patients') %>
 <h1>All patients</h1>
-<%#= will_paginate %>
+
 <ul class="patients">
   <%# @patients.each do |patient| %>
   <%#= render patient %>
-  <%= render @patients %>
+  <%#= render @patients %>
   <%# end %>
 </ul>
-<%#= will_paginate %>
+<%= will_paginate %>
+
+<div class="table-responsive">
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Email</th>
+            <th>Phone Number</th>
+            <th>Doctor Assigned</th>
+            <th>Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @patients.each do |patient| %>
+            <tr>
+              <td><%= link_to patient.name, patient %></td>
+              <td><%= patient.email %></td>
+              <td><%= patient.name %></td>
+              <td><%= patient.name %></td>
+              <td>
+                <%#= edit_link(patient) %>
+                <%= link_to "Edit", edit_patient_path(patient) , class: 'btn btn-primary btn-sm' %>
+                <%= link_to "View", patient_path(patient) , class: 'btn btn-success btn-sm' %>
+                <%= link_to "Delete", patient_path(patient), title: 'Delete', class: 'fa fa-trash-alt btn btn-danger btn-sm', method: :delete, data: { confirm: "Are you sure you want to delete this patient #{patient.name}?" } %>
+              </td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+    <%= will_paginate %>
