--- a/JaipurCityHospital/app/views/doctors/show.html.erb
+++ b/JaipurCityHospital/app/views/doctors/show.html.erb
@@ -13,3 +13,107 @@
     </section>
   </aside>
 </div>
+
+
+<div class="row mb-4">
+  <div class="col-xl-4">
+    <div class="card h-100">
+      <div class="card-body">
+        <div class="text-center">
+          <div class="clearfix"></div>
+          <div>
+            <%#= image_tag @user.image_url, class: "img-fluid" %>
+            <i class="fa fa-user-circle default-profile"></i>
+          </div>
+          <h5 class="mt-3 mb-1"><%= @doctor.name %></h5>
+          <p class="text-muted">
+            <%#= @user.title_name %>
+          </p>
+        </div>
+        <hr class="my-4" />
+        <div class="text-muted">
+          <div class="table-responsive mt-4">
+            <div>
+              <p class="mb-1">Bio :</p>
+              <h5 class="font-size-16"><%#= @user.bio %></h5>
+            </div>
+            <div class="mt-4">
+              <p class="mb-1">Name :</p>
+              <h5 class="font-size-16"><%= @doctor.name %></h5>
+            </div>
+            <div class="mt-4">
+              <p class="mb-1">Mobile :</p>
+              <h5 class="font-size-16"><%#= @patient.phone %></h5>
+            </div>
+            <div class="mt-4">
+              <p class="mb-1">Email :</p>
+              <h5 class="font-size-16"><%= @doctor.email %></h5>
+            </div>
+            <div class="mt-4">
+              <p class="mb-1">Created At :</p>
+              <h5 class="font-size-16"><%= @doctor.created_at.to_date.strftime("%d %B %Y") %></h5>
+            </div>
+            <div class="mt-4">
+              <%#= form_for @patient, url: patient_path, method: :patch, html: { class: "form-inline" } do |f| %>
+              <div class="mt-4">
+                <%#= simple_fields_for @user do |user_fields| %>
+                <%#= user_fields.label :birthady, "Birthday:" %>
+                <%#= user_fields.input :birthday, label: false, class: "form-control" %>
+                <%# end %>
+              </div>
+              <div class="mt-4">
+                <div class="col">
+                  <%#= f.label :badge, "Badge:" %>
+                </div>
+                <div class="col">
+                  <%#= f.select :badge, options_for_select(User::BADGE, @user.badge), { prompt: "-- Select Badge --" }, class: "form-control", style: "margin-bottom: 20px;" %>
+                </div>
+                <div class="col">
+                  <h6>Hidden From List: <%#= f.check_box :hidden %></h6>
+                </div>
+              </div>
+              <%#= f.submit "Update", class: "btn btn-primary" %>
+              <%# end %>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-xl-8">
+    <div class="row">
+      <%#= render partial: "user_analytics" %>
+    </div>
+    <%# if current_admin.super_admin? %>
+    <div class="card mb-0">
+      <ul class="nav nav-tabs nav-tabs-custom nav-justified" role="tablist">
+        <li class="nav-item">
+          <a class="nav-link active" data-bs-toggle="tab" href="#about" role="tab"> <i class="uil uil-user-circle font-size-20"></i> <span class="d-none d-sm-block">About</span> </a>
+        </li>
+      </ul>
+      <div class="tab-content p-4">
+        <div class="tab-pane active" id="about" role="tabpanel">
+          <div>
+            <div>
+              <h5 class="font-size-16 mb-4">Recent Activity</h5>
+              <ul class="activity-feed mb-0 ps-2">
+                <%# @history_presenter.rows do |event| %>
+                <li class="feed-item">
+                  <div class="feed-item-list">
+                    <p class="text-muted mb-1">
+                      <%#= timeago_tag event[:time], :limit => 1.year.ago %>
+                    </p>
+                    <h5 class="font-size-16"><%#= event[:description] %></h5>
+                  </div>
+                </li>
+                <%# end %>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <%# end %>
+  </div>
+</div>
+
