--- a/JaipurCityHospital/app/views/layouts/_header.html.erb
+++ b/JaipurCityHospital/app/views/layouts/_header.html.erb
@@ -26,7 +26,7 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link "><%= link_to "Doctors", doctors_path %></a>
+          <a class="nav-link "><%= link_to "Doctors", doctors_path %>||</a>
         </li>
         <li class="nav-item">
           <a class="nav-link"><%= link_to "Patients", patients_path %></a>
