--- a/JaipurCityHospital/app/views/shared/_form_patients.html.erb
+++ b/JaipurCityHospital/app/views/shared/_form_patients.html.erb
@@ -14,5 +14,12 @@
     <%= f.label :password_confirmation, "Confirmation" %>
     <%= f.password_field :password_confirmation, class: 'form-control' %>
 
+    <div class="form-group">
+    <%= f.label :image, class: 'mb-2' %> <br>
+    <%= f.file_field :image %>
+  </div>
+
     <%= f.submit yield(:button_text), class: "btn btn-primary" %>
+
+    <%#= render "shared/image_input", f: f, input: :image, url: f.object.url, label: "Upload Photo" %>
     <% end %>
