--- a/JaipurCityHospital/app/assets/stylesheets/custom.scss
+++ b/JaipurCityHospital/app/assets/stylesheets/custom.scss
@@ -3,11 +3,11 @@
 
 
 #layout-wrapper{
-  background-image: url('../assets/images/hallway.jpg');
+  background-image: url('/assets/images/hallway.jpg');
   background-size: cover;
   /*background-color: red;*/
-  z-index: 12;
 }
+
 $sidebar-width:  250px;
 $header-height: 70px;
 
