--- a/JaipurCityHospital/app/views/layouts/_header.html.erb
+++ b/JaipurCityHospital/app/views/layouts/_header.html.erb
@@ -19,10 +19,13 @@
             Departments
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <li><a class="dropdown-item" href="#">General Physician</a></li>
+            <li><a class="dropdown-item" href="#">Orthopeadics</a></li>
+            <li><a class="dropdown-item" href="#">Gynae</a></li>
+            <li><a class="dropdown-item" href="#">Pedatric</a></li>
+            <li><a class="dropdown-item" href="#">Neurology</a></li>
+            <li><a class="dropdown-item" href="#">Dermatology</a></li>
+            <li><a class="dropdown-item" href="#">Dentistry</a></li>
           </ul>
         </li>
         <li class="nav-item">
