--- a/JaipurCityHospital/app/views/layouts/_header.html.erb
+++ b/JaipurCityHospital/app/views/layouts/_header.html.erb
@@ -35,7 +35,7 @@
           <a class="nav-link" href="/patients"><%#= link_to "Patients", patients_path %>Patients</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Career</a>
+          <a class="nav-link" href="/help">Career</a>
         </li>
         <!--li class="nav-item">
           <a class="nav-link" href="#">Financial Support</a>
@@ -48,11 +48,11 @@
 
 
       <li class="nav-item">
-          <a class="nav-link " href="/login"><%#= link_to "Doctors", doctors_path %>Doctor's Login</a>
+          <a class="nav-link " href="/doctors/new"><%#= link_to "Doctors", doctors_path %>Add Doctors</a>
         </li>
        <%#= link_to "Doctor's login", login_path %>
        <li class="nav-item">
-          <a class="nav-link " href="/signin"><%#= link_to "Doctors", doctors_path %>Patient's Signin</a>
+          <a class="nav-link " href="/patients/new"><%#= link_to "Doctors", doctors_path %>Add Patient</a>
         </li>
        <%#= link_to " Patient's login", signin_path %>
        </ul>
