--- a/JaipurCityHospital/app/views/welcome/about.html.erb
+++ b/JaipurCityHospital/app/views/welcome/about.html.erb
@@ -1,3 +1,21 @@
-<h1>Welcome#about</h1>
-<p>Find me in app/views/welcome/about.html.erb</p>
-<%= link_to image_tag("hospital.jpg", alt: "hospital") %>
+<!--h1>Welcome#about</h1>
+<p>Find me in app/views/welcome/about.html.erb</p-->
+<%#= link_to image_tag("hospital.jpg", alt: "hospital") %>
+
+<div class="wrapper">
+  <div class= "items">
+    <div class="item" tabindex="0" style="background-image: url('/assets/ambulance.jpg')"></div>
+    <div class="item" tabindex="1" style="background-image: url('/assets/hospital.jpg')"></div>
+    <div class="item" tabindex="2" style="background-image: url('/assets/hospital_bed.jpg')"></div>
+    <div class="item" tabindex="3" style="background-image: url('/assets/kitten.jpg')"></div>
+    <div class="item" tabindex="4" style="background-image: url('/assets/JchLogo1.jpeg')"></div>
+    <div class="item" tabindex="5" style="background-image: url('/assets/JchLogo2.jpg')"></div>
+    <div class="item" tabindex="6" style="background-image: url('/assets/ambulance.jpg')"></div>
+    <div class="item" tabindex="7" style="background-image: url('/assets/hospital.jpg')"></div>
+    <div class="item" tabindex="8" style="background-image: url('/assets/hospital_bed.jpg')"></div>
+    <div class="item" tabindex="9" style="background-image: url('/assets/kitten.jpg')"></div>
+    <div class="item" tabindex="10" style="background-image: url('/assets/JchLogo1.jpeg')"></div>
+    <div class="item" tabindex="11" style="background-image: url('/assets/JchLogo2.jpg')"></div>
+  </div>
+  </div>
+
