--- a/JaipurCityHospital/app/views/patients/new.html.erb
+++ b/JaipurCityHospital/app/views/patients/new.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "Patient's Sign up") %>
-<% provide(:button_text, 'Create my account') %>
+<% provide(:button_text, 'Add Patient') %>
 <h1>Patient's Sign up</h1>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
