--- a/JaipurCityHospital/app/views/shared/_form_doctors.html.erb
+++ b/JaipurCityHospital/app/views/shared/_form_doctors.html.erb
@@ -8,11 +8,11 @@
       <%= f.label :email %>
       <%= f.email_field :email, class: 'form-control' %>
 
-      <%= f.label :password %>
-      <%= f.password_field :password, class: 'form-control' %>
+      <%#= f.label :password %>
+      <%#= f.password_field :password, class: 'form-control' %>
 
-      <%= f.label :password_confirmation, "Confirmation" %>
-      <%= f.password_field :password_confirmation, class: 'form-control' %><br/>
+      <%#= f.label :password_confirmation, "Confirmation" %>
+      <%#= f.password_field :password_confirmation, class: 'form-control' %><br/>
 
       <%= f.select :department, options_for_select(User::DEPARTMENTS, params[:department]), class: 'form-select ', prompt: 'Select Departments', onchange: 'this.form.submit();' %>
 
