--- a/JaipurCityHospital/app/views/patients/new.html.erb
+++ b/JaipurCityHospital/app/views/patients/new.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, "Patient's Sign up") %>
 <% provide(:button_text, 'Add Patient') %>
-<h1>Patient's Sign up</h1>
+<h1>Add a Patient</h1>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= render 'shared/form_patients' %>
