--- a/JaipurCityHospital/app/assets/stylesheets/custom.scss
+++ b/JaipurCityHospital/app/assets/stylesheets/custom.scss
@@ -10,6 +10,23 @@ body{
   /*background-color: red;*/
 }
 
+nav.navbar{
+  background: #c5c6c7 !important;
+}
+
+.add-doctor, .add-patient{
+  float: right;
+}
+
+.alert-success{
+    color: green;
+  }
+  .alert-danger{
+   background-color: transparent;
+      border: 0  transparent;
+    color: red;
+  }
+
 $sidebar-width:  250px;
 $header-height: 70px;
 
@@ -25,6 +42,8 @@ $header-height: 70px;
 }
 .footer {
   margin-top: 800px !important;
+  padding-left: 0 !important;
+  padding-right: 0 !important;
 }
 
 :root {
