--- a/JaipurCityHospital/app/views/doctors/new.html.erb
+++ b/JaipurCityHospital/app/views/doctors/new.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, "Doctor's Sign up") %>
 <% provide(:button_text, 'Add Doctor') %>
-<h1>Doctor's Sign up</h1>
+<h1>Add a Doctor</h1>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= render 'shared/form_doctors' %>
