--- a/JaipurCityHospital/app/views/layouts/application.html.erb
+++ b/JaipurCityHospital/app/views/layouts/application.html.erb
@@ -20,8 +20,12 @@
     <div class="main-content">
       <div class="page-content">
         <div class="container-fluid">
-    <!--p class="notice"><%= notice %></p>
-       <p class="alert"><%= alert %></p-->
+          <% if notice %>
+    <p class="notice alert-success"><%= notice %></p>
+    <% end %>
+    <% if alert %>
+       <p class="alert alert-danger"><%= alert %></p>
+       <% end %>
     <%= yield %>
   </div>
 </div>
