--- a/JaipurCityHospital/app/views/shared/_form_doctors.html.erb
+++ b/JaipurCityHospital/app/views/shared/_form_doctors.html.erb
@@ -8,6 +8,9 @@
       <%= f.label :email %>
       <%= f.email_field :email, class: 'form-control' %>
 
+      <%= f.label :phone %>
+    <%= f.text_field :phone, class: 'form-control' %>
+
       <%#= f.label :password %>
       <%#= f.password_field :password, class: 'form-control' %>
 
@@ -20,6 +23,5 @@
         <%= f.label :image, class: 'mb-2' %> <br>
         <%= f.file_field :image %>
       </div>
-
       <%= f.submit yield(:button_text), class: "btn btn-primary" %>
     <% end %>
