--- a/JaipurCityHospital/app/views/shared/_form_patients.html.erb
+++ b/JaipurCityHospital/app/views/shared/_form_patients.html.erb
@@ -8,6 +8,9 @@
     <%= f.label :email %>
     <%= f.email_field :email, class: 'form-control' %>
 
+    <%= f.label :phone %>
+    <%= f.text_field :phone, class: 'form-control' %>
+
     <%#= f.label :password %>
     <%#= f.password_field :password, class: 'form-control' %>
 
@@ -16,15 +19,14 @@
 
     <%= f.select :department, options_for_select(User::DEPARTMENTS, params[:department]), class: 'form-select ', prompt: 'Select Departments', onchange: 'this.form.submit();' %>
 
-    <%= f.select :doctor, options_for_select(Doctor.all.map {|doctor| [doctor.name]}), class: 'form-select ', prompt: 'Select Doctor', onchange: 'this.form.submit();' %>
+    <%= f.select :doctor_id, options_for_select(Doctor.all.map {|doctor| [doctor.name, doctor.id]}), class: 'form-select ', prompt: 'Select Doctor', onchange: 'this.form.submit();' %>
+
 
     <div class="form-group">
     <%= f.label :image, class: 'mb-2' %> <br>
     <%= f.file_field :image %>
   </div>
-
     <%= f.submit yield(:button_text), class: "btn btn-primary" %>
-
     <%#= render "shared/image_input", f: f, input: :image, url: f.object.url, label: "Upload Photo" %>
     <% end %>
     <!--script type="text/javascript">
