--- a/JaipurCityHospital/app/views/welcome/help.html.erb
+++ b/JaipurCityHospital/app/views/welcome/help.html.erb
@@ -1,2 +1,2 @@
-<h1>Welcome#help</h1>
-<p>Find me in app/views/welcome/help.html.erb</p>
+<h1>Welcome#Services</h1>
+<p>Find me in app/views/welcome/services.html.erb</p>
