doctors and patients profile completed

--- a/JaipurCityHospital/app/views/doctors/show.html.erb
+++ b/JaipurCityHospital/app/views/doctors/show.html.erb
@@ -38,17 +38,17 @@
         <hr class="my-4" />
         <div class="text-muted">
           <div class="table-responsive mt-4">
-            <div>
+            <!--div>
               <p class="mb-1">Bio :</p>
               <h5 class="font-size-16"><%#= @user.bio %></h5>
-            </div>
+            </div-->
             <div class="mt-4">
               <p class="mb-1">Name :</p>
               <h5 class="font-size-16"><%= @doctor.name %></h5>
             </div>
             <div class="mt-4">
               <p class="mb-1">Mobile :</p>
-              <h5 class="font-size-16"><%#= @patient.phone %></h5>
+              <h5 class="font-size-16"><%= @doctor.phone %></h5>
             </div>
             <div class="mt-4">
               <p class="mb-1">Email :</p>
