--- a/JaipurCityHospital/app/views/doctors/index.html.erb
+++ b/JaipurCityHospital/app/views/doctors/index.html.erb
@@ -37,7 +37,10 @@
                 <% end %>
               </td>
               <td>
+                <% if current_user.admin? %>
                 <%= link_to "Edit", edit_doctor_path(doctor) , class: 'btn btn-primary btn-sm' %>
+                <% else %>
+                <% end %>
                 <%= link_to "View", doctor_path(doctor) , class: 'btn btn-success btn-sm' %>
                 <% if current_user.admin? %>
                 <%= link_to "Delete", doctor_path(doctor), title: 'Delete', class: 'fa fa-trash-alt btn btn-danger btn-sm', method: :delete, data: { confirm: "Are you sure you want to delete this doctor #{doctor.name}?" } %>
