--- a/JaipurCityHospital/app/views/patients/index.html.erb
+++ b/JaipurCityHospital/app/views/patients/index.html.erb
@@ -37,7 +37,10 @@
                 </td>
               <td>
                 <%#= edit_link(patient) %>
+                <% if current_user.admin? %>
                 <%= link_to "Edit", edit_patient_path(patient) , class: 'btn btn-primary btn-sm' %>
+                <% else %>
+                <% end %>
                 <%= link_to "View", patient_path(patient) , class: 'btn btn-success btn-sm' %>
                 <% if current_user.admin? %>
                 <%= link_to "Delete", patient_path(patient), title: 'Delete', class: 'fa fa-trash-alt btn btn-danger btn-sm', method: :delete, data: { confirm: "Are you sure you want to delete this patient #{patient.name}?" } %>
