--- a/JaipurCityHospital/app/views/doctors/edit.html.erb
+++ b/JaipurCityHospital/app/views/doctors/edit.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'Edit patient') %>
 <% provide(:button_text, 'Save changes') %>
-<h1>Update Patient's profile</h1>
+<h1>Update Doctor's profile</h1>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= render 'shared/form_doctors' %>
